--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  font_awesome_flutter: ^10.7.0
   gap: ^3.0.1
   google_sign_in: ^6.2.1
 
